# libnvs

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.in  libnvs.pc.in
debian/: changelog  control  libnvs1.install  nvs-cat.install
include/: nvs.h
scripts/: 98-nvs.rules  Makefile.am  is_nvs_device.c
src/: Makefile.am  adpcm_decoder.c  adpcm_upsampled_decoder.c  bv32_decoder.c  decoder.h  hidraw.c  hidraw.h  libnvs.c  opus_decoder.c  protocol.h  sbc_decoder.c
src/upsampler/: P2_UP_2_BL3_60dB.h  P2_UP_2_BL3_80dB.h  P2_UP_2_Eq1_20dB.h  P2_UP_2_Eq1_40dB.h  P2_UP_2_Eq1_60dB.h  P2_UP_2_Eq2_60dB.h  P2_UP_2_Eq2_80dB.h  P2_UP_2_Eq3_60dB.h  P2_UP_2_HA2_60dB.h  P2_UP_2_LA_N_13.h  P2_UP_2_LA_N_17.h  P2_UP_2_LA_N_9.h  P2_UP_2_WR1.h  P2_UP_2_WR2.h  P2_UP_2_WR3.h  UP_2_Eq1_20dB.h  UP_2_Eq1_40dB.h  UP_2_Eq1_60dB.h  UP_2_Eq2_60dB.h  UP_2_LA_N_13.h  UP_2_LA_N_17.h  UP_2_LA_N_9.h  cmsis_q_types.h  fir_def.h  upsampler_v1.c  upsampler_v1.h
tools/: Makefile.am  nvs-4mod.c  nvs-cat.c
